# WinapiHelpers

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  sources.cmake
conan/profiles/: linux_gcc_7_release  mac_clang_12_release  windows_msvc_16_release
include/winapi-helpers/: bios.h  co_initializer.h  dynamic_handler_map.h  handle_ptr.h  is_callable.h  md5.h  native_api_helper.h  one_instance.h  partition_information.h  physical_memory.h  process_helper.h  service_helper.h  special_path_helper.h  sqlite3_helper.h  system_information.h  thread_pool.h  uint8_codecvt.h  user_information.h  utilities.h  win_bios.h  win_co_initializer.h  win_errors.h  win_partition_information.h  win_ptrs.h  win_registry_helper.h  win_special_path_helper.h  win_user_information.h
include/winapi_helpers/: win_errors.h  win_hardware_helper.h  win_hardware_information.h  win_partition_information.h  win_process_helper.h  win_ptrs.h  win_registry_helper.h  win_service_helper.h  win_special_path_helper.h  win_system_information.h  win_user_information.h
src/: CMakeLists.txt  bios.cpp  co_initializer.cpp  one_instance.cpp  partition_information.cpp  physical_memory.cpp  process_helper.cpp  registry_helper.cpp  service_helper.cpp  special_path_helper.cpp  sqlite3_helper.cpp  system_information.cpp  user_information.cpp  utilities.cpp  win_bios.cpp  win_co_initializer.cpp  win_hardware_helper.cpp  win_one_instance.cpp  win_partition_information.cpp  win_physical_memory.cpp  win_process_helper.cpp  win_registry_helper.cpp  win_service_helper.cpp  win_special_path_helper.cpp  win_system_information.cpp  win_user_information.cpp
test/functional/: CMakeLists.txt  win_helpers_func_tests.cpp
test/functional_test/: CMakeLists.txt  win_helpers_func_tests.cpp
